<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:title="@string/principal">
         <menu>
             <item android:icon="@drawable/ic_baseline"
                 android:id="@+id/home"
                 android:title="@string/menu_home">

             </item>
             <item android:icon="@drawable/ic_group"
                 android:id="@+id/personas"
                 android:title="@string/jugador">

             </item>
         </menu>
</item>
    <item android:title="@string/secunadario">
        <menu>
            <item android:icon="@drawable/ic_baseline"
                android:id="@+id/home2"
                android:title="@string/menu_home">

            </item>
            <item android:icon="@drawable/ic_group"
                android:id="@+id/personas2"
                android:title="@string/galeria">

            </item>
        </menu>
    </item>
</menu>