<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoUsuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="@dimen/max"
                    android:layout_height="@dimen/medium1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/small"

                    android:gravity="center"
                    android:text="@string/new_user"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/txt_apellido"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="textPersonName"
                android:text="" />


            <EditText
                android:id="@+id/txt_nacionalidad"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/nal"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/txt_pais"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/pais"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/txt_direccion"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/dir"
                android:inputType="textPersonName"
                android:text="" />

            <Spinner
                android:id="@+id/spinnerCamiseta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/talla"

                android:text="" />

            <EditText
                android:id="@+id/txt_estilo"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/juego"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/txt_golpe"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/golpe"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/txt_raqueta"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/raqueta"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/txt_cordaje"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/cordaje"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/espacio"
                android:ems="10"

                android:hint="@string/contraseña"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinner_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinner_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_fecha"
                    android:layout_width="90dp"
                    android:layout_height="36dp"

                    android:text="@string/fecha" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_nacimiento"
                android:layout_width="@dimen/max"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:ems="10"
                android:hint="@string/nacimiento"

                android:text="" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sexo" />

            <RadioGroup
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/radioM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hombre" />

                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mujer" />
                </LinearLayout>
            </RadioGroup>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/imagen"
                android:textColor="@color/padel_azul"
                android:textSize="20sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="300dp"
                android:layout_height="300dp"
               android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
               />

            <Button
                android:id="@+id/btn_imagen"
                android:layout_width="@dimen/large3"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium"
                android:onClick="onClick"
                android:text="@string/btn_foto" />

            <Button
                android:id="@+id/btn_sigJugador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/boton_home1" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>