<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/medium"
    android:paddingLeft="@dimen/medium"
    tools:context=".CrearCompetenciaFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/admin_amarillo"
            android:text="@string/boton_crearEvento" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boton_competicion1" />

                <EditText
                    android:id="@+id/Et_competicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_evento" />

                <EditText
                    android:id="@+id/Et_evento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria" />

                <EditText
                    android:id="@+id/Et_categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premio" />

                <EditText
                    android:id="@+id/Et_premio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sede" />

                <EditText
                    android:id="@+id/Et_sede"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />


            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_monthFI"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_dayFI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Spinner
                android:id="@+id/spinner_yearFI"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content" />
            <Button
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:id="@+id/btn_Finicio"
                android:text="@string/start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_monthFF"
                android:layout_width="wrap_content"
                android:entries="@array/meses"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_dayFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/dias"
                />

            <Spinner
                android:id="@+id/spinner_yearFF"
                android:entries="@array/años"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:id="@+id/btn_Ffinal"
                android:text="@string/end"/>


        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_inicio" />

                <TextView
                    android:id="@+id/txt_fecha_inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:ems="10"
                    android:hint="@string/inicio"

                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_fin" />

                <TextView
                    android:id="@+id/txt_fecha_fin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:ems="10"
                    android:hint="@string/fin"
                    />
            </TableRow>


        </TableLayout>

        <Button
            android:id="@+id/btn_insertarCompetencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

    </LinearLayout>
</ScrollView>

</LinearLayout>