<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CrearAdministradorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_listAdmin"
            android:layout_width="200dp"
            android:layout_height="72dp"
            android:layout_marginRight="@dimen/medium"
            android:onClick="onClick"
            android:text="@string/asignarJugador"
            app:cornerRadius="15dp"
            app:strokeColor="@color/admin_amarillo" />
        <Button
            android:layout_width="200dp"
            android:layout_height="72dp"
            android:id="@+id/btn_gridAdmin"
            android:text="@string/asignarAdministrador"
            app:cornerRadius="15dp"
            app:strokeColor="@color/admin_amarillo"
            android:onClick="onClick"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/txt_role"
        android:text="@string/opcion"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/admin_amarillo"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_id"/>

</LinearLayout>